[package]

name = "string_cache"
version = "0.2.24"
authors = [ "The Servo Project Developers" ]
description = "A string interning library for Rust, developed as part of the Servo project."
license = "MIT / Apache-2.0"
repository = "https://github.com/servo/string-cache"
documentation = "http://doc.servo.org/string_cache/"
build = "build.rs"

[lib]
name = "string_cache"

[features]

# Enable event logging for generating benchmark traces.
# See examples/event-log.
log-events = ["rustc-serialize"]

# Use unstable features to optimize space and time (memory and CPU usage).
unstable = []

# HeapSizeOf support
heap_size = ["heapsize"]

[dependencies]
lazy_static = "0.2"
serde = ">=0.6, <0.9"
phf_shared = "0.7.4"
debug_unreachable = "0.1.1"

[dev-dependencies]
rand = "0.3"

[dependencies.rustc-serialize]
version = "0.3"
optional = true

[dependencies.heapsize]
version = ">=0.1.1, <0.4"
optional = true

[build-dependencies]
phf_generator = "0.7.4"
phf_shared = "0.7.4"
