[package]
name = "integration_tests"
version = "0.0.1"
authors = [ "The Servo Project Developers" ]
build = "build.rs"
publish = false
edition = "2018"

[lib]
doctest = false
test = true

[features]

# Use unstable features to optimize space and time (memory and CPU usage).
unstable = []

[dependencies]
string_cache = { version = "0.9", path = ".." }

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
string_cache_codegen = { version = "0.6", path = "../string-cache-codegen" }

[build-dependencies]
string_cache_codegen = { version = "0.6", path = "../string-cache-codegen" }
