[package]

name = "string_cache_shared"
version = "0.1.5"
authors = [ "The Servo Project Developers" ]
description = "A string interning library for Rust, developed as part of the Servo project − shared code between the compiler plugin and main crate."
license = "MIT / Apache-2.0"
repository = "https://github.com/servo/string-cache"
build = "build.rs"

[lib]

name = "string_cache_shared"
path = "lib.rs"

[dependencies]
debug_unreachable = "0.0.6"
phf = "0.7.3"

[build-dependencies]
phf_codegen = "0.7.3"
