[package]

name = "string_cache_codegen"
version = "0.2.27"
authors = [ "The Servo Project Developers" ]
description = "A codegen library for string-cache, developed as part of the Servo project."
license = "MIT / Apache-2.0"
repository = "https://github.com/servo/string-cache"
documentation = "http://doc.servo.org/string_cache_codegen/"

[lib]
name = "string_cache_codegen"

[dependencies]
phf_codegen = "0.7.15"
